# dockagents

./: .gitignore  Cargo.toml  README.md  RELEASING.md  build.rs  dockagents.md
.github/workflows/: release.yml
examples/indie-devteam/: README.md  manifest.yaml
examples/indie-devteam/skills/: pm-planner.md  security-auditor.md  senior-reviewer.md
installer/: dockagents.iss
src/: agent.rs  api.rs  cli.rs  config.rs  isolation.rs  lib.rs  main.rs  manifest.rs  mcp.rs  paths.rs  registry.rs  remote.rs  signing.rs  sip.rs  updater.rs  watcher.rs
src/runtime/: bus.rs  mod.rs  process.rs  workspace.rs
