[package]
name = "dockagents"
version = "0.1.0"
edition = "2021"
description = "Isolated, distributable, invocable multi-agent environments"
license = "Apache-2.0"
repository = "https://github.com/MrTigerST/dockagents"
readme = "README.md"

[[bin]]
name = "dockagents"
path = "src/main.rs"

[[bin]]
name = "dockagents-setup"
path = "src/bin/dockagents-setup.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
semver = { version = "1.0", features = ["serde"] }
crossbeam-channel = "0.5"
walkdir = "2.5"
shellexpand = "3.1"
humantime-serde = "1.1"
humantime = "2.1"
ureq = { version = "2.10", features = ["json"] }
fs_extra = "1.3"
ctrlc = "3.4"
chrono = { version = "0.4", features = ["serde"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
notify = "6.1"
notify-debouncer-mini = "0.4"
tiny_http = "0.12"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
